--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "autoprefixer": "10.4.20",
     "firebase": "10.13.1",
     "lucide-react": "0.446.0",
-    "@radix-ui/react-accordion": "1.2.0"
+    "@radix-ui/react-accordion": "1.2.0",
+    "@radix-ui/react-dialog": "1.0.5",
+    "class-variance-authority": "0.7.0"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
