--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "8.4.41",
     "autoprefixer": "10.4.20",
     "firebase": "10.13.1",
+    "firebase-admin": "12.6.0",
     "lucide-react": "0.446.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-dialog": "1.0.5",
